# wordchipper

./: .gitignore  AGENTS.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rustfmt.toml
.github/workflows/: ci.yml  codspeed.yml  python-publish.yml
benchmarks/: README.md
benchmarks/amd3990X/: lscpu.txt
benchmarks/m2x12/: report.txt
bindings/python/: Cargo.toml  README.md  par_batch.sh  pyproject.toml
bindings/python/benchmarks/: conftest.py  test_bench_encode.py
bindings/python/py_src/wordchipper/compat/: __init__.py  __init__.pyi  tiktoken.py  tiktoken.pyi  tokenizers.py  tokenizers.pyi
bindings/python/src/: lib.rs  support.rs
bindings/python/src/tokenizer/: mod.rs  tokenizer_impl.rs  tokenizer_options.rs
bindings/python/tests/: test_compat.py  test_wordchipper.py
bindings/wasm/: README.md
bindings/wasm/src/: lib.rs
bindings/wasm/tests/: tokenizer.rs
book/src/: bindings.md  custom-logos-lexers.md  feature-flags.md  getting-started.md  how-tokenizers-work.md  performance.md  pretrained-models.md  training.md
crates/wchipper/: Cargo.toml  README.md
crates/wchipper/src/: main.rs
crates/wchipper/src/commands/: cat_cmd.rs  mod.rs  train_cmd.rs
crates/wchipper/src/commands/lexers/: lexers_cmd.rs  lexers_list_cmd.rs  lexers_stress_cmd.rs  mod.rs
crates/wchipper/src/commands/models/: mod.rs  models_cmd.rs  models_list_cmd.rs
crates/wchipper/src/util/: disk_cache.rs  input_batcher.rs  input_output.rs  lexer_inventory.rs  lexer_selector.rs  logging.rs  mod.rs  model_selector.rs  tokenizer_mode.rs
crates/wordchipper/: Cargo.toml  README.md
crates/wordchipper-cli/: Cargo.toml  README.md  USAGE.md
crates/wordchipper-cli-util/: Cargo.toml
crates/wordchipper-cli/src/: main.rs
crates/wordchipper-disk-cache/: Cargo.toml
crates/wordchipper-disk-cache/src/: disk_cache.rs  lib.rs  path_resolver.rs  path_utils.rs
crates/wordchipper-training/: Cargo.toml  README.md
crates/wordchipper-training/src/: bpe_trainer.rs  lib.rs  training_types.rs
crates/wordchipper-training/src/utility/: mod.rs  pair_span_index.rs  text_span_counter.rs  token_span_buffer.rs
crates/wordchipper/src/: lib.rs  types.rs
crates/wordchipper/src/decoders/: decode_results.rs  mod.rs  slab_index_decoder.rs  token_decoder.rs  token_dict_decoder.rs
crates/wordchipper/src/decoders/utility/: byte_decoder.rs  pair_decoder.rs  testing.rs
crates/wordchipper/src/encoders/: encoder_options.rs  mod.rs  testing.rs  token_encoder.rs
crates/wordchipper/src/encoders/token_span_encoder/: mod.rs  token_span_encoder.rs
crates/wordchipper/src/encoders/token_span_encoder/span_encoders/: bpe_backtrack_encoder.rs  buffer_sweep_encoder.rs  merge_buffer_heap_encoder.rs  merge_heap_encoder.rs  merge_tail_heap_encoder.rs  mod.rs  priority_merge_encoder.rs  span_encoder.rs  span_encoder_selector.rs  tail_sweep_encoder.rs
crates/wordchipper/src/pretrained/: mod.rs  vocab_description.rs  vocab_factory.rs  vocab_query.rs
crates/wordchipper/src/pretrained/factory/: vocab_factory.rs
crates/wordchipper/src/pretrained/openai/: factories.rs  patterns.rs  provider.rs  resources.rs  spanning.rs  specials.rs
crates/wordchipper/src/spanners/: mod.rs  spanner_builder.rs  spanning_config.rs  text_spanner.rs
crates/wordchipper/src/spanners/span_lexers/: accelerators.rs  lexer_builder.rs  lexer_spanner.rs  regex_automata.rs  span_lexer.rs
crates/wordchipper/src/spanners/span_lexers/logos/: cl100k.rs  gpt2_family.rs  mod.rs  o200k.rs  r50k.rs  testutil.rs
crates/wordchipper/src/support/: strings.rs
crates/wordchipper/src/support/concurrency/: pool_toy.rs  threads.rs
crates/wordchipper/src/support/concurrency/rayon/: rayon_decoder.rs  rayon_encoder.rs
crates/wordchipper/src/support/regex/: alt_choice.rs  mod.rs  regex_pattern.rs  regex_wrapper.rs
crates/wordchipper/src/support/resources/: url_resource.rs
crates/wordchipper/src/tokenizer/: tokenizer_impl.rs  tokenizer_options.rs
crates/wordchipper/src/vocab/: byte_vocab.rs  mod.rs  pair_vocab.rs  span_vocab.rs  special_vocab.rs  token_vocab.rs  unified_vocab.rs  vocab_types.rs
crates/wordchipper/src/vocab/io/: base64_vocab.rs  datagym_vocab.rs  mod.rs
crates/wordchipper/src/vocab/utility/: factories.rs  mod.rs  pattern_tools.rs  specials_tools.rs  token_list.rs  validators.rs
crates/wordchipper/src/vocab/utility/testing/: mod.rs
crates/wordchipper/tests/: validation.rs
dev-crates/lexer-equivalence/: Cargo.toml  DIVERGENCES.md  README.md
dev-crates/lexer-equivalence/src/: harness.rs  lib.rs  main.rs  representatives.rs
dev-crates/lexer-equivalence/tests/: equivalence.rs
dev-crates/report-tool/: Cargo.toml
dev-crates/report-tool/src/: main.rs
dev-crates/report-tool/src/commands/: dev_cmd.rs  mod.rs  python_bench_plots_cmd.rs  rust_bench_plots_cmd.rs
dev-crates/report-tool/src/commands/benchmark_plots/: benchmark_plots_cmd.rs  common_plots.rs  graph_style.rs  mod.rs  plots.rs  python_bench_plots.rs  python_bench_plots_cmd.rs  rust_bench_plots.rs  rust_bench_plots_cmd.rs
dev-crates/report-tool/src/util/: bounds_tools.rs  float_tools.rs  human_format.rs  mod.rs
dev-crates/report-tool/src/util/bench_data/: mod.rs  par_bench.rs  py_bench_data.rs  rust_bench_data.rs
dev-crates/report-tool/src/util/plotting/: marker.rs  mod.rs
dev-crates/sample-timer/src/: batch_stats.rs  main.rs  tiktoken_support.rs  tokenizers_support.rs  wordchipper_support.rs
dev-crates/wordchipper-bench/: Cargo.toml  par_batch.sh
dev-crates/wordchipper-bench/bench-data/parallel/: encoding_parallel.1.json  encoding_parallel.16.json  encoding_parallel.2.json  encoding_parallel.4.json  encoding_parallel.48.json  encoding_parallel.64.json  encoding_parallel.8.json
dev-crates/wordchipper-bench/bench-results/: latest.md
dev-crates/wordchipper-bench/bench-results/archive/: 2026-02-25.md
dev-crates/wordchipper-bench/benches/: decoding_single.rs  encoding_parallel.rs  encoding_single.rs  spanning.rs
dev-crates/wordchipper-bench/src/: divan_parser.rs  lib.rs
dev-crates/wordchipper-data/src/: dataset.rs
(+72 files in other folders)
