[workspace]
# Require version 2 to avoid "feature" additiveness for dev-dependencies
# https://doc.rust-lang.org/cargo/reference/resolver.html#feature-resolver-version-2
resolver = "2"

members = [
    "bindings/*",
    "crates/*",
    "dev-crates/*",
]

[workspace.package]
version = "0.8.0"
repository = "https://github.com/crutcher/wordchipper"
rust-version = "1.93.0"
edition = "2024"
license = "MIT"
authors = [
    "Crutcher Dunnavant <crutcher@gmail.com>",
]


[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
double_must_use = "allow"
doc_markdown = "deny"


[workspace.dependencies]
# Public Deps
# These are visible to users, so we need to be careful about overly recent requirements.

compact_str = "0.9.0"
dary_heap = "0.3.5"
directories-next = "2.0.0"
downloader = "0.2.7"
hashbrown = "0.16.0"
inventory = "0.3.20"
jsonl = "4.0.1"
parking_lot = "0.12.4"
rand = "0.9.2"
rayon = "1.11"
serde = "1.0.220"
serde_json = "1.0.140"
shellexpand = "3.1.0"
spin = "0.9.8"

aho-corasick = { version = "1.1", default-features = false }
base64 = { version = "0.22.1", default-features = false }
foldhash = { version = "0.2.0", default-features = false }
logos = { version = "0.16.1", default-features = false }
log = { version = "0.4.20", default-features = false }
num-traits = { version = "0.2.10", default-features = false }
once_cell = { version = "1.21.0", default-features = false }
regex = { version = "1.12.3", default-features = false }
ringbuffer = { version = "0.16", default-features = false }
strum = { version = "0.27.0", default-features = false, features = ["derive"] }
thiserror = { version = "2.0.10", default-features = false }
tracing = { version = "0.1.40", default-features = false }

# ATTENTION:
# Upgrading the regex deps comes with significant performance penalties
# for concurrent encoding. Something about the multi-thread contention,
# even with cloned regex instances, has gotten worse.
fancy-regex = { version = "0.13.0", default-features = false }


# Local Deps and/or Compile-Time Deps
# We can bind these as tightly as we want.
arrow = "58.0.0"
bpe-openai = "0.3"
cfg-if = "1.0.4"
clap = "4.5.60"
clap-markdown = "0.1.5"
criterion = "0.8.2"
divan = "0.1.21"
document-features = "0.2.12"
humansize = "2.1.3"
indicatif = "0.18.4"
js-sys = "0.3"
parquet = "58.0.0"
proptest = "1.10.0"
pyo3 = "0.28.2"
range-parser = "0.1.2"
serial_test = "3.4.0"
similar = "2.7.0"
stderrlog = "0.6.0"
tempdir = "0.3.7"
tiktoken-rs = "0.9.1"
tokenizers = "0.22.2"
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"

