[package]
name = "wordchipper-cli-util"
description = "Utilities for the Wordchipper CLI"
version.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
wordchipper = { version = "0.8.1", path = "../wordchipper", features = ["client"] }
stderrlog = { workspace = true }
log = { workspace = true }
clap = { workspace = true, features = ["derive"] }

arrow = { workspace = true }
parquet = { workspace = true, features = ["arrow"] }
