[package]
name = "wordchipper-disk-cache"
description = "A disk cache for Wordchipper downloads"
authors.workspace = true
license.workspace = true
repository.workspace = true

version.workspace = true

edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true


[features]
default = ["default-tls"]

## Use the platform-native TLS backend (OpenSSL on Linux, SChannel on Windows, Security.framework on macOS).
default-tls = ["downloader/default-tls"]

## Use rustls (pure Rust) TLS backend. Useful for cross-compilation and manylinux builds.
rustls-tls = ["downloader/rustls-tls"]


[dependencies]
directories-next = { workspace = true }

# features=["tui"} incompatible with conflicting indicatif versions.
downloader = { workspace = true, default-features = false }


[dev-dependencies]
serial_test = { workspace = true }
