[package]
name = "wordchipper-training"
description = "BPE LLM Tokenizer Training for wordchipper"
version.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true


[lints]
workspace = true


[features]
default = []

## This enables a number of ``tracing`` instrumentation points.
## This is only useful for timing tracing of the library itself.
tracing = [
    "tracing/attributes",
]


[dependencies]
log = { workspace = true }
wordchipper = { version = "0.8.1", path = "../wordchipper", features = ["std"] }
compact_str = { workspace = true }
dary_heap = { workspace = true }
num-traits = { workspace = true }

# "tracing" feature deps:
tracing = { workspace = true, optional = true }

