[package]
name = "wordchipper"
description = "HPC Rust LLM Tokenizer Library"
keywords = ["ai", "gpt", "bpe", "tokenizer"]
authors.workspace = true
license.workspace = true
repository.workspace = true

version.workspace = true

edition.workspace = true
rust-version.workspace = true


[package.metadata.docs.rs]
all-features = true


[lints]
workspace = true


[features]
default = [
    "std",
    "fast-hash",
    "parallel",
]

## The base set of features needed to load and run pre-trained encoders and decoders.
## Uses platform-native TLS by default (OpenSSL on Linux). Combine with `rustls-tls`
## instead of `default-tls` for environments without system OpenSSL (e.g. manylinux).
client = [
    "download",
    "datagym",
    "default-tls",
]

## The download feature enables downloading vocabularies from the internet.
download = [
    "dep:wordchipper-disk-cache",
    "std",
]

## Use the platform-native TLS backend (OpenSSL on Linux).
default-tls = [
    "download",
    "wordchipper-disk-cache/default-tls",
]

## Use rustls (pure Rust) TLS backend for downloads. Useful for manylinux builds.
rustls-tls = [
    "download",
    "wordchipper-disk-cache/rustls-tls",
]

## The "std" feature enables the use of the `std` library.
## Without "std", the crate uses hashbrown for HashMap/HashSet.
std = [
    "thiserror/std",
    "base64/std",
    "strum/std",
    "aho-corasick/std",
    "fancy-regex/default",
    "foldhash?/std",
    "log/std",
    "num-traits/std",
    "regex/default",
    "regex-automata/std",
]

## Enables datagym io.
datagym = [
    "dep:serde_json",
    "std",
]

## Swaps HashMap/HashSet to ``foldhash`` for faster hashing.
## Works in both std and no_std environments.
fast-hash = [
    "dep:foldhash",
]

## Enables parallelism wrappers using the ``rayon`` crate.
parallel = [
    "dep:rayon",
    "concurrent",
]

## Gates thread pool (PoolToy) and concurrency utilities.
concurrent = [
    "std",
]

## This enables a number of ``tracing`` instrumentation points.
## This is only useful for timing tracing of the library itself.
tracing = [
    "tracing/attributes",
]

## Enable test utilities for downstream users.
testing = []



[dependencies]
# macro packages.
cfg-if = { workspace = true }
document-features = { workspace = true }

thiserror = { workspace = true }
logos = { workspace = true, features = ["export_derive"] }
base64 = { workspace = true, features = ["alloc"] }
fancy-regex = { workspace = true, features = ["unicode"] }
log = { workspace = true }
num-traits = { workspace = true }
ringbuffer = { workspace = true }
regex = { workspace = true, features = ["unicode"] }
regex-automata = { workspace = true, features = ["alloc", "meta", "nfa-thompson", "hybrid", "unicode"] }
strum = { workspace = true }

# Provides HashMap/HashSet in no_std mode (non-optional so `default-features = false` just works).
hashbrown = { workspace = true, features = ["alloc"] }

spin = { workspace = true }
once_cell = { workspace = true, features = ["alloc", "critical-section"] }
inventory = { workspace = true }

serde_json = { workspace = true, optional = true }

aho-corasick = { workspace = true }
foldhash = { workspace = true, optional = true }
unicode-general-category = { workspace = true }

# "download" feature deps:
wordchipper-disk-cache = { version = "0.9.0", path = "../wordchipper-disk-cache", optional = true, default-features = false }

# "parallel" feature deps:
rayon = { workspace = true, optional = true }

# "tracing" feature deps:
tracing = { workspace = true, optional = true }


[dev-dependencies]
tempdir = { workspace = true }
tiktoken-rs = { workspace = true }
tokenizers = { workspace = true, features = ["http"] }
serial_test = { workspace = true }
proptest = { workspace = true }
