[package]
name = "lexer-equivalence"
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
wordchipper = { path = "../../crates/wordchipper", features = ["default", "testing"] }

[dev-dependencies]
regex = { workspace = true, features = ["std", "unicode-perl", "unicode-gencat"] }
