[package]
name = "report-tool"
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
# wordchipper = { path = "../../crates/wordchipper" }
wordchipper-cli-util = { path = "../../crates/wordchipper-cli-util" }
divan-parser = { path = "../divan-parser" }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
humansize = { workspace = true }
# fontlib issues, investigate wasm install.
plotters = { workspace = true, features = [
    "svg_backend", "full_palette", "all_series", "all_elements"
] }
clap = { workspace = true, features = ["derive"] }
regex = { workspace = true }
log = { workspace = true }

[lints]
workspace = true
